--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>bs</groupId>
   <artifactId>bsonify</artifactId>
-  <version>1.1-SNAPSHOT</version>
+  <version>1.1</version>
   <packaging>jar</packaging>
 
   <name>bsonify</name>
@@ -16,6 +16,23 @@
   </properties>
 
   <build>
+    <resources>
+      <resource>
+        <filtering>true</filtering>
+        <directory>src/main/resources</directory>
+        <includes>
+          <include>version.txt</include>
+        </includes>
+      </resource>
+      <resource>
+        <filtering>true</filtering>
+        <directory>src/main/resources</directory>
+        <excludes>
+          <exclude>version.txt</exclude>
+        </excludes>
+      </resource>
+    </resources>
+
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -46,10 +63,21 @@
         <version>2.2</version>
         <executions>
           <execution>
+            <id>package</id>
             <phase>package</phase>
             <goals>
               <goal>shade</goal>
             </goals>
+          </execution>
+          <execution>
+            <id>package-noversion</id>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <configuration>
+              <finalName>${project.name}</finalName>
+            </configuration>
           </execution>
         </executions>
       </plugin>
